Stage 3 refactoring